View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0025188 | Open CASCADE | OCCT:Data Exchange | public | 2014-08-22 11:31 | 2021-10-06 17:12 |
Reporter | Assigned To | gka | |||
Priority | normal | Severity | minor | ||
Status | new | Resolution | open | ||
Platform | ALL | ||||
Product Version | 6.7.1 | ||||
Target Version | 7.7.0 | ||||
Summary | 0025188: Error during STEp file writing | ||||
Description | Problem was found during testing of issue 0025168. Attempt to write previously loaded file bug24135_Drup.stp causes error and not all entities are written. It is impossible to get detailed information about STEP writing error inside DRAW. It would be great to have command or change command format for such problem. | ||||
Steps To Reproduce | stepread bug24135_Drum.stp a * stepwrite a a_1 bug24135_write.stp | ||||
Tags | No tags attached. | ||||
Test case number | bugs step(014) bug25168 | ||||
Date Modified | Username | Field | Change |
---|---|---|---|
2014-08-22 11:31 |
|
New Issue | |
2014-08-22 11:31 |
|
Assigned To | => gka |
2014-08-22 11:32 |
|
Test case number | => bugs step(014) bug25168 |
2014-08-25 08:24 | abv | Relationship added | child of 0025168 |
2014-09-11 09:09 | abv | Target Version | 6.8.0 => 7.1.0 |
2016-10-26 12:46 | gka | Target Version | 7.1.0 => 7.2.0 |
2017-07-27 09:33 | abv | Target Version | 7.2.0 => 7.4.0 |
2017-08-03 10:41 |
|
Note Added: 0069081 | |
2019-09-04 12:58 | abv | Target Version | 7.4.0 => 7.5.0 |
2020-09-17 19:58 | gka | Target Version | 7.5.0 => 7.6.0 |
2021-10-06 17:12 | szy | Target Version | 7.6.0 => 7.7.0 |