0025188: Data Exchange, Step Export - Losing shapes after import

Check on null for description added to WriteStep methods
(for product, product_definition and product_definition_formation)