src/RWStepBasic/RWStepBasic_RWProduct.cxx
@@ -91,7 +91,14 @@ void RWStepBasic_RWProduct::WriteStep
 
 	// --- own field : description ---
 
-	SW.Send(ent->Description());
+	if (!ent->Description().IsNull())
+	{
+		SW.Send(ent->Description());
+	}
+	else
+	{
+		SW.SendUndef();
+	}
 
 	// --- own field : frameOfReference ---
 
