src/RWStepBasic/RWStepBasic_RWProductDefinitionFormation.cxx
@@ -71,7 +71,14 @@ void RWStepBasic_RWProductDefinitionFormation::WriteStep
 
 	// --- own field : description ---
 
-	SW.Send(ent->Description());
+	if (!ent->Description().IsNull())
+	{
+		SW.Send(ent->Description());
+	}
+	else
+	{
+		SW.SendUndef();
+	}
 
 	// --- own field : ofProduct ---
 
